src/test/deca/context/valid/operation-binaire-divide.deca
// Description:
//    operation binaire divide
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    2/1;
}