src/test/deca/context/invalid/operation-binaire-or-wrong.deca
// Description:
//    Test 3.33 fail avec or 
//
// Resultats:
//    Ligne 11: Or ne s'utilise qu'avec des booléens.
//
// Historique:
//    cree le 06/01/2023

{
    1 || "hello world";
}